--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,51 @@
-
 /* body */
 
 * {
-	font-family: 'Ubuntu', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
-
 
 /* header */
 header h1 {
-	font-family: 'Amatic SC', cursive;
-	text-align: right;
-	font-size: 	60px;
-	font-weight: bold;
-	margin: 30px 20px 0 40px;
+    font-family: 'Amatic SC', cursive;
+    text-align: right;
+    font-size: 60px;
+    font-weight: bold;
+    margin: 30px 20px 0 40px;
 }
 
 header img {
-	height: 128px;
-	margin: 0 20px 0 40px;
-	float: right;
+    height: 128px;
+    margin: 0 20px 0 40px;
+    float: right;
 }
+
 nav {
-	margin-top: 40px;
-	margin-bottom: 25px;
-	text-align: right;
+    margin-top: 40px;
+    margin-bottom: 25px;
+    text-align: right;
 }
 
 span {
-	margin: 0 2px 0 2px;
+    margin: 0 2px 0 2px;
 }
+
 .label {
-	font-size: 1.2em;
-	cursor: pointer;
-	background-color: #F4D00C;
+    font-size: 1.2em;
+    cursor: pointer;
+    background-color: #F4D00C;
+}
+
+img {
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+    -webkit-box-shadow: 0 2px 6px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0 2px 6px 2px rgba(0,0,0,0.75);
+    box-shadow: 0 2px 6px 2px rgba(0,0,0,0.75);
+    margin-bottom:20px;
+}
+
+img:hover {
+    filter: none; /* IE6-9 */
+    -webkit-filter: grayscale(0); /* Google Chrome, Safari 6+ & Opera 15+ */
+
 }
